--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -66,7 +66,7 @@
 
         function startVideo() {
             if (navigator.mediaDevices.getUserMedia) {
-                navigator.mediaDevices.getUserMedia({ video: true })
+                navigator.mediaDevices.getUserMedia({ video: {  facingMode: 'environment'  } })
                     .then(function(stream) {
                         video.srcObject = stream;
                     })
