--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -78,7 +78,11 @@
     </style>
 </head>
 <body>
-    <h1>BUR-BANT</h1>
+    <p>Kullanım Klavuzu : Koyu bir arka planın üzerine a4 kağıdını yerleştiriniz.
+        <br>Daha sonra ölçmek istediğiniz cisimleri a4 uzerine yerleştiriniz.
+        <br>A4 kağıdını yatay olacak şekilde telefon kamerasına 
+	<br>(a4 ve arka plan gözükecek şekilde) işlenmiş görüntüyü al Butonuna tıklayınız.
+    </p>
     <button onclick="startVideo()">Kamerayı Aç</button>
     <div class="video-container">
         <video id="videoStream" autoplay playsinline></video>
